# HR-Analytics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Run HR Analytics.bat  Run_HR_Analytics.bat  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: competitive-landscape.md  enterprise-strategy.md  reports-suite-plan.md  strategy-appendix.md
docs/guidebook/: guidebook.html  hr-analytics-guidebook.html
legacy/python/: HR_Analytics_Employee_Template.xlsx  requirements.txt
sample-data/: Admin_assets_2026-05-05.xlsx  Admin_contracts_2026-05-05.xlsx  Admin_lifecycle_2026-05.xlsx  Employee report as on 2026-04-05.xlsx  Employee report as on 2026-05-05.xlsx  LD_enrollments_2026-05.xlsx  LD_programs_2026-05.xlsx  PMS_cycle_FY26-H1.xlsx  Payroll_aggregate_2026-05.xlsx  Payroll_statutory_2026-05.xlsx  README.md  TA_requisitions_2026-05.xlsx
sample-data/intake-pack/: 01_Employee_Master_2026-04-05.xlsx  02_Employee_Master_2026-05-05.xlsx  03_Talent_Acquisition_Requisitions_2026-05.xlsx  04_Performance_Review_Cycle_FY26-H1.xlsx  05_Payroll_Per_Employee_Detail_2026-05.xlsx  06_Payroll_Department_Aggregate_2026-05.xlsx  07_Payroll_Statutory_Compliance_2026-05.xlsx  08_L_D_Programs_2026-05.xlsx  (+7 more)
scripts/: build-sample-workspace.mjs  build.mjs  check-a11y.mjs  check-overflow.mjs  check-size.mjs  embed-demo.mjs  embed-guidebook.mjs  gen-intake-pack.mjs  generate-sample-data.mjs  guidebook-check.mjs  package.mjs  serve.mjs  serve.ps1  test.mjs  vitest-shim.mjs
src/: App.tsx
tests/: test_exports.py
(+189 files in other folders)
