[project]
name = "hr-analytics"
version = "0.1.0"
description = "Portable workforce analytics desktop application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "pywebview>=5.4",
  "streamlit>=1.44.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.12.0",
  "pytest>=8.3.5",
]

[project.scripts]
hr-analytics = "hr_analytics.streamlit_app:main"
hr-analytics-desktop = "hr_analytics.desktop:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
